action bar changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginEnd="24dp"
                     android:gravity="start|center_vertical"
                     android:maxLines="1"
                     android:textColor="@color/primary_text"
@@ -66,7 +67,6 @@
                     android:layout_height="26dp"
                     android:layout_marginEnd="16dp"
                     android:queryHint="@string/search_hint"
-                    android:searchIcon="@drawable/ic_baseline_search_24"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/iv_first"
