--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -22,15 +22,32 @@
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/accent"
         android:text="@string/log_in_using_vk"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:visibility="invisible"
         app:cornerRadius="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_gift_big" />
+
+    <ImageView
+        android:id="@+id/iv_gift_big"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="128dp"
+        android:src="@drawable/ic_gift_3d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:constraint_referenced_ids="iv_gift_big,btn_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
