--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -41,8 +41,9 @@
         android:maxLines="2"
         android:scrollbars="vertical"
         android:text="@string/name"
+        android:textAlignment="textEnd"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_avatar"
@@ -56,7 +57,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/birth_date"
         android:textColor="@color/primary_text"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
@@ -81,7 +82,7 @@
         android:id="@+id/tv_wishlists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/border_red"
         android:padding="8dp"
@@ -96,9 +97,9 @@
         android:id="@+id/rv_wishlists"
         android:layout_width="0dp"
         android:layout_height="240dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_wishlists"
