--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginEnd="8dp"
                     android:gravity="start|center_vertical"
                     android:maxLines="1"
                     android:textColor="@color/primary_text"
@@ -46,7 +46,7 @@
                     android:id="@+id/iv_second"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/iv_first"
                     app:layout_constraintTop_toTopOf="parent"
@@ -65,14 +65,15 @@
                     android:id="@+id/search_view"
                     android:layout_width="wrap_content"
                     android:layout_height="26dp"
-                    android:layout_marginEnd="16dp"
-                    android:paddingStart="16dp"
+                    android:layout_marginEnd="8dp"
                     android:queryHint="@string/search_hint"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/iv_first"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/primary_text" />
+                    app:tint="@color/icons" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
