--- a/app/src/main/res/drawable/border_red.xml
+++ b/app/src/main/res/drawable/border_red.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@color/inputsBack" />
     <stroke
-        android:width="5dp"
+        android:width="2dp"
         android:color="@color/accent" />
+    <corners android:radius="12dp" />
 </shape>
