--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="inputsBack">#FFFFFFFF</color>
     <color name="primary">#FFC107</color>
     <color name="primary_dark">#FFA000</color>
+    <color name="bottom_icons">#FFA000</color>
     <color name="primary_light">#FFECB3</color>
     <color name="accent">#FF5252</color>
     <color name="primary_text">#212121</color>
