small calendar fix

--- a/app/src/main/res/layout/fragment_friends_wishlist.xml
+++ b/app/src/main/res/layout/fragment_friends_wishlist.xml
@@ -7,6 +7,17 @@
     android:foregroundTint="@color/primary_text"
     tools:context=".features.wishlist.presentation.fragments.WishlistFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
@@ -41,6 +52,7 @@
         android:id="@+id/rv_gifts"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
