some appeareance refactoring

--- a/app/src/main/res/layout/dialog_add_gift.xml
+++ b/app/src/main/res/layout/dialog_add_gift.xml
@@ -23,12 +23,12 @@
         android:layout_height="160dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/gift_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/til_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/accent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/default_gift" />
 
     <Button
         android:id="@+id/btn_gallery"
