--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,6 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="inputsBack">#121212</color>
+
+    <color name="anotherMonthsDaysLabelsColor">#32FFFFFF</color>
 </resources>
