placeholders for photos added

--- a/app/src/main/res/layout/dialog_edit_client.xml
+++ b/app/src/main/res/layout/dialog_edit_client.xml
@@ -49,8 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/til_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/accent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/default_person" />
 
     <Button
         android:id="@+id/btn_gallery"
