--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/default_gift" />
 
     <TextView
         android:id="@+id/tv_name"
