--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".features.client.presentation.AccountFragment">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="72dp"
+        android:clickable="true"
+        android:padding="0dp"
+        android:src="@drawable/ic_baseline_add_24"
+        android:theme="@style/ThemeOverlay.GiftGiver.FloatingActionButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
@@ -71,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/border_red"
         android:padding="8dp"
         android:paddingStart="16dp"
@@ -81,53 +94,58 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_wishlists"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_wishlists"
         tools:listitem="@layout/item_wishlist" />
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
-        android:backgroundTint="@color/accent"
-        android:text="@string/logout"
-        android:textColor="@color/primary_text"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:cornerRadius="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/views"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        app:constraint_referenced_ids="rv_wishlists,btn_add,tv_name,tv_birthdate,tv_info,btn_logout,tv_wishlists,iv_avatar"
+        app:constraint_referenced_ids="rv_wishlists,tv_name,tv_birthdate,tv_info,tv_wishlists,iv_avatar, btn_edit"
         tools:visibility="visible" />
 
-    <Button
-        android:id="@+id/btn_add"
+    <TextView
+        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/add"
+        android:text="@string/no_wishlists_here_yet"
+        android:textSize="24sp"
         android:textStyle="bold"
-        app:cornerRadius="12dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/rv_wishlists"
+        app:layout_constraintStart_toStartOf="@+id/rv_wishlists"
+        app:layout_constraintTop_toTopOf="@+id/rv_wishlists"
+        tools:visibility="gone" />
+
+    <Button
+        android:id="@+id/btn_edit"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_account"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:iconTint="@color/primary_dark"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -144,17 +162,4 @@
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         tools:src="@drawable/default_person" />
 
-    <TextView
-        android:id="@+id/tv_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/no_wishlists_here_yet"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/rv_wishlists"
-        app:layout_constraintStart_toStartOf="@+id/rv_wishlists"
-        app:layout_constraintTop_toTopOf="@+id/rv_wishlists"
-        tools:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
