--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -20,15 +20,18 @@
     <TextView
         android:id="@+id/tv_forName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:maxLines="7"
         android:text="@string/name"
         android:textAlignment="textEnd"
         android:textColor="@color/primary_text"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/iv_photo"
