--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -7,11 +7,12 @@
     <TextView
         android:id="@+id/tv_wishlist_name"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:ellipsize="end"
         android:maxLines="1"
         android:text="@string/name"
         android:textAlignment="textStart"
