--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -58,7 +58,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@color/primary_text"
-            app:tint="#86575252" />
+            app:tint="#40575252" />
+
+        <ImageView
+            android:id="@+id/iv_filter_client"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@color/primary_text"
+            app:tint="@color/filer_yours" />
 
         <TextView
             android:id="@+id/tv_desc"
