--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,4 +13,5 @@
     <color name="inputsBack">#121212</color>
 
     <color name="anotherMonthsDaysLabelsColor">#32FFFFFF</color>
+    <color name="filer_yours">#4007C1FF</color>
 </resources>
