--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="anotherMonthsDaysLabelsColor">#32000000</color>
+    <color name="filer_yours">#40FFA000</color>
 </resources>
